hphp/test/vm/impl_abstract_dv_si.php.expectf
HipHop Fatal error: Declaration of B::i() must be compatible with that of A::i() in %s on line 3
